src/test/ui/error-codes/E0396.stderr
error[E0658]: dereferencing raw pointers in constants is unstable (see issue #51911)
  --> $DIR/E0396.rs:5:28
   |
LL | const VALUE: u8 = unsafe { *REG_ADDR };
   |                            ^^^^^^^^^
   |
   = help: add #![feature(const_raw_ptr_deref)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
